# AFM-distillation

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: main.ipynb
examples/distill_from_md/: allegro_baseline.py  allegro_distill.py  gen_md.sh  painn_baseline.py  painn_distill.py  synthetic_gen_md.py  synthetic_gen_relax.py  teacher_test.py  tools.ipynb
examples/distill_from_md/data/: h2o_1593_30.xyz  h2o_1593_train_25.xyz  h2o_1593_val_5.xyz  md_0.xyz  md_1.xyz  md_2.xyz  md_3.xyz
examples/distill_from_mt/: gen_md.sh  synthetic_gen_md.py  teacher_test.py  teacher_test.sh
examples/distill_from_relax/: allegro_distill.py  gen_md.sh  painn_distill.py  train.sh
examples/distill_test/: allegro_compile.py  allegro_li3po4.py  compiled_speed_test.py  md_speed_test.py  painn_li3po4.py  run.bash  schnet_li3po4.py
examples/distill_test/data/: li3po4_192.xyz
src/afm_distill/: .nshconfig.generated.json  __init__.py  main.py  registry.py
src/afm_distill/configs/: __init__.py
src/afm_distill/configs/main/: __init__.py
src/afm_distill/configs/models/: __init__.py
src/afm_distill/configs/models/allegro/: __init__.py
src/afm_distill/configs/registry/: __init__.py
src/afm_distill/models/: __init__.py  base.py
src/afm_distill/models/allegro/: model.py  util.py
src/afm_distill/models/cace/: model.py
src/afm_distill/models/painn/: model.py
src/afm_distill/models/schnet/: model.py  util.py
src/afm_distill/synthetic_gen/: rattle_md.py  rattle_relax.py
src/afm_distill/wrappers/: ase_calculator.py  ensemble.py  property_predictor.py
(+8 files in other folders)
